--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
@@ -8,6 +7,9 @@
         <title>Jester</title>
 
         <style type="text/css">
+            body {
+              background: black;
+            }
             #wrapper {
                 position: relative;
                 width: 100px;
@@ -22,73 +24,83 @@
                 -webkit-border-radius: 60px;
                 -webkit-transition-property: -webkit-transform, background-color, color;
                 -webkit-transition-duration: 0.5s;
+                -webkit-transform-origin: 50% 50%;
+            }
+            #bounds {
+              position: absolute;
+              background: white;
+              width: 400px;
+              height: 400px;
             }
         </style>
 
-        <script type="text/javascript" src="jester.js"></script>
-        <script type="text/javascript">
-            document.addEventListener("DOMContentLoaded", function()
-            {
-                var element = document.getElementById("wrapper");
-
-                var swipeHandler = function(touches, direction) {
-                    var matrix = new WebKitCSSMatrix(this.style.webkitTransform);
-                    if(direction === "right")
-                        matrix.e += 50;
-                    else if(direction === "left")
-                        matrix.e -= 50;
-
-                    if(direction === "up")
-                        matrix.f -= 50;
-                    else if(direction === "down")
-                        matrix.f += 50;
-
-                    if(matrix.e < -100 || matrix.e > 250)
-                        matrix.e = 0;
-
-                    this.style.webkitTransform = "translate3d(" + matrix.e + "px, " + matrix.f + "px, 0)";
-                };
-                var changeColor = function(touches) {
-                    this.style.backgroundColor = "#" + (Math.round(0xffffff * Math.random()).toString(16));
-                };
-                var alertDoubleTapped = function() {
-                    alert("Double tap detected!");
-                };
-                var sizeCircle = function(touches) {
-                    this.style.webkitTransform = "scale(" + touches.current.scale() + ")";
-                };
-                var sizeRelease = function(touches) {
-                    this.style.webkitTransform = "scale(" + 1 + ")";
-                };
-                var startTouch = function(touches, event) {
-                    console.log(["touch started with id: ", event.touches[0].identifier].join(""))
-                };
-                var duringTouch = function(touches, event) {
-                    console.log(["touch continued with id: ", event.touches[0].identifier].join(""));
-                };
-                var endTouch = function(touches, event) {
-                    console.log(["touch ended with id: ", event.changedTouches[0].identifier].join(""));
-                };
-                jester(element, { swipeDistance: 10, preventDefault: true })
-                    .pinchnarrow(sizeCircle)
-                    .pinchwiden(sizeCircle)
-                    .pinchend(sizeRelease)
-                    .swipe(swipeHandler)
-                    .tap(changeColor)
-                    .doubletap(alertDoubleTapped)
-                    .start(startTouch)
-                    .during(duringTouch)
-                    .end(endTouch);
-            }, false);
-        </script>
 
     </head>
 
     <body>
 
+        <div id="bounds"></div>
+
         <div id="wrapper">
         </div>
 
-    </body>
+        <script type="text/javascript" src="jester.js"></script>
+        <script type="text/javascript">
+            var element = document.getElementById("wrapper");
 
+            element.style.webkitTransform = "translate3d(150px, 150px, 0)";
+
+            var swipeHandler = function(touches, direction) {
+                var matrix = new WebKitCSSMatrix(this.style.webkitTransform);
+                if(direction === "right")
+                    matrix.e += 50;
+                else if(direction === "left")
+                    matrix.e -= 50;
+
+                if(direction === "up")
+                    matrix.f -= 50;
+                else if(direction === "down")
+                    matrix.f += 50;
+
+                if(matrix.e < 0 || matrix.e > 300)
+                    matrix.e = 150;
+
+                if(matrix.f < 0 || matrix.f > 300)
+                    matrix.f = 150;
+
+                this.style.webkitTransform = "translate3d(" + matrix.e + "px, " + matrix.f + "px, 0)";
+            };
+            var changeColor = function(touches) {
+                this.style.backgroundColor = "#" + (Math.round(0xffffff * Math.random()).toString(16));
+            };
+            var alertDoubleTapped = function() {
+                alert("Double tap detected!");
+            };
+            var sizeCircle = function(touches) {
+                this.style.webkitTransform = "scale(" + touches.current.scale() + ")";
+            };
+            var sizeRelease = function(touches) {
+                this.style.webkitTransform = "scale(" + 1 + ")";
+            };
+            var startTouch = function(touches, event) {
+                console.log(["touch started with id: ", event.touches[0].identifier].join(""))
+            };
+            var duringTouch = function(touches, event) {
+                console.log(["touch continued with id: ", event.touches[0].identifier].join(""));
+            };
+            var endTouch = function(touches, event) {
+                console.log(["touch ended with id: ", event.changedTouches[0].identifier].join(""));
+            };
+            jester(element, { swipeDistance: 10, preventDefault: true })
+                .pinchnarrow(sizeCircle)
+                .pinchwiden(sizeCircle)
+                .pinchend(sizeRelease)
+                .swipe(swipeHandler)
+                .tap(changeColor)
+                .doubletap(alertDoubleTapped)
+                .start(startTouch)
+                .during(duringTouch)
+                .end(endTouch);
+        </script>
+    </body>
 </html>
